--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,6 +24,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./pipeline-practice/Dockerfile \
-          tags: ${{ secrets.DOCKER_USERNAME }}/ris-devops-app:latest\
+          file: ./pipeline-practice/Dockerfile\
+          tags: nikilzoro/ris-devops-app:latest\
           push: ./pipeline-practice
